@@ -46,6 +46,16 @@
 #define HIRES_ATTR HICOLOUR_SCR_SIZE
 #define HIRES_SCR_SIZE (HICOLOUR_SCR_SIZE + 1)
 
+#ifdef USE_LIBPNG
+
+#include <png.h>
+
+static int get_rgb32_data( libspectrum_byte *rgb32_data, size_t stride,
+			   size_t height, size_t width );
+static int rgb32_to_rgb24( libspectrum_byte *rgb24_data, size_t rgb24_stride,
+			   libspectrum_byte *rgb32_data, size_t rgb32_stride,
+			   size_t height, size_t width );
+
 /* The biggest size screen (in units of DISPLAY_ASPECT_WIDTH x
    DISPLAY_SCREEN_HEIGHT ie a Timex screen is size 2) we will be
    creating via the scalers */
@@ -71,23 +81,6 @@ screenshot_save( void )
   memcpy( saved_screen, display_image, sizeof( display_image ) );
   return 0;
 }
-
-#ifdef USE_LIBPNG
-
-#include <png.h>
-
-static int get_rgb32_data( libspectrum_byte *rgb32_data, size_t stride,
-			   size_t height, size_t width );
-static int rgb32_to_rgb24( libspectrum_byte *rgb24_data, size_t rgb24_stride,
-			   libspectrum_byte *rgb32_data, size_t rgb32_stride,
-			   size_t height, size_t width );
-
-/* The space used for drawing the screen image on. Out here to avoid placing
-   these large objects on the stack */
-static libspectrum_byte
-  rgb_data1[ MAX_SIZE * DISPLAY_SCREEN_HEIGHT * 3 * DISPLAY_ASPECT_WIDTH * 4 ],
-  rgb_data2[ MAX_SIZE * DISPLAY_SCREEN_HEIGHT * 3 * DISPLAY_ASPECT_WIDTH * 4 ],
-   png_data[ MAX_SIZE * DISPLAY_SCREEN_HEIGHT * 3 * DISPLAY_ASPECT_WIDTH * 3 ];
 
 static int
 screenshot_write2( const char *filename, scaler_type scaler, int compression )
