@@ -31,11 +31,10 @@
 #include "ui/scaler/scaler.h"
 #endif				/* #ifndef SCALER_H */
 
-int screenshot_save( void );
-int screenshot_write( const char *filename, scaler_type scaler );
-
 #ifdef USE_LIBPNG
 
+int screenshot_save( void );
+int screenshot_write( const char *filename, scaler_type scaler );
 int screenshot_write_fast( const char *filename, scaler_type scaler );
 int screenshot_available_scalers( scaler_type scaler );
 
